# wikitrad

./: .gitignore  PKGBUILD  README.md  demo.tape  pyproject.toml  wikitrad.1
.portfoliodb/: description.md
wikitrad/: wikitrad.py
