[tool.poetry]
name = "wikitrad"
version = "0.2.0"
description = "Translate terms from the command line using Wikipedia"
license = "GPL"
authors = ["Ewen Le Bihan <hey@ewen.works>"]
readme = "README.md"
repository = "https://github.com/ewen-lbh/wikitrad"

[tool.poetry.dependencies]
python = "^3.6"
rich = "^10.1.0"
langdetect = "^1.0.8"
docopt = "^0.6.2"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
pylint = {version = "^2.7.4", allow-prereleases = true}
isort = {version = "^5.8.0", allow-prereleases = true}
rope = {version = "^0.18.0", allow-prereleases = true}

[tool.poetry.scripts]
wikitrad = "wikitrad.wikitrad:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
